--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,33 +1,42 @@
 .cover__subtitle{
     margin: 0 auto;
+    font-style: normal;
+    font-weight: 400;
+    text-align: center;
 }
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1024px){
     .cover__subtitle{
         max-width: 360px;
-        font-style: normal;
-        font-weight: 400;
         font-size: 18px;
         line-height: 22px;
-        text-align: center;
+
+        padding-bottom: 245px;
+    }
+}
+@media screen and (max-width: 1024px){
+    .cover__subtitle{
+        max-width: 360px;
+        font-size: 18px;
+        line-height: 22px;
+
+        padding-bottom: 195px;
     }
 }
 @media screen and (max-width: 768px) {
     .cover__subtitle{
         max-width: 360px;
-        font-style: normal;
-        font-weight: 400;
         font-size: calc((100vw / 48) + 2px);
         line-height: calc((100vw / 48) + 6px);
-        text-align: center;
+
+        padding-bottom: 115px;
     }
 }
 @media screen and (max-width: 320px) {
     .cover__subtitle{
         max-width: 288px;
-        font-style: normal;
-        font-weight: 400;
         font-size: 14px;
         line-height: 16px;
-        text-align: center;
+
+        padding-bottom: 33px;
     }
 }
