--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,11 +5,15 @@
     font-weight: 400;
     line-height: 28px;
     margin-left: 18px;
+
+    transition: 0.3s linear;
 }
 
-.header__lang-link:nth-of-type(1){
-    border-bottom: solid 2px white;
+.header__lang-link:hover{
+    cursor: pointer;
+    opacity: 0.8;
 }
+
 
 @media screen and (max-width: 320px){
     .header__lang-link{
