--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,19 +1,18 @@
 .intro__title{
+    margin-top: 0;
     margin-bottom: 40px;
+    font-style: normal;
+    font-weight: 900;
 }
 
 @media screen and (min-width: 320px) {
     .intro__title{
-        font-style: normal;
-        font-weight: 900;
         font-size: 54px;
         line-height: 58px;
     }
 }
 @media screen and (max-width: 320px) {
     .intro__title{
-        font-style: normal;
-        font-weight: 900;
         font-size: 32px;
         line-height: 35px;
     }
